🔊 add logs - also add file manipulations in UniqueWordCounter